<resources>
    <string name="app_name">Weather App</string>

    <string name="settings">Settings</string>
    <string name="city">City</string>

    <string name="use_raw_data">Use raw data</string>
    <string name="use_raw_data_summary">Use raw data or processed data.
        \n\nRaw data is acquired from weather surface observations, which this app then translates into the current weather.
        \n\nProcessed data is weather data that is pre-processed by Environment Canada, and as such, more likely to be accurate.
    </string>

    <string name="hourly_forecast_interval">Hourly forecast interval</string>

    <string name="humidity">Humidity</string>
    <string name="relative_humidity">Relative Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="gust_to">Gust to</string>
    <string name="gusting_to">Gusting to</string>
    <string name="calm">Calm</string>

    <string name="get_weather">Get Weather</string>
    <string name="getting_the_weather">Getting the weather…</string>

    <string name="clear">Clear</string>
    <string name="sunny">Sunny</string>

    <string name="thunder">Thunder</string>

    <string name="no_rain">No rain</string>
    <string name="light_rain">Drizzle</string>
    <string name="light_snow">Flurry</string>
    <string name="rainy">Rainy</string>
    <string name="snowy">Snowy</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="heavy_snow">Heavy snow</string>

    <string name="no_clouds">No clouds</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="cloudy">Cloudy</string>

    <string name="no_fog">No fog</string>
    <string name="slightly_foggy">Misty</string>
    <string name="mostly_foggy">Foggy</string>
    <string name="foggy">Dense fog</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>