<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings">

        <CheckBoxPreference
            android:key="use_raw_data_key"
            android:defaultValue="false"
            android:summary="@string/use_raw_data_summary"
            android:title="@string/use_raw_data" />

        <ListPreference
            app:key="cities_key"
            app:defaultValue="-79.64,43.58,-79.11,43.86"
            app:entries="@array/city_entries"
            app:entryValues="@array/city_values"
            app:title="@string/city"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="weather_intervals_key"
            app:defaultValue="1"
            app:entries="@array/weather_intervals_entries"
            app:entryValues="@array/weather_intervals_values"
            app:title="@string/hourly_forecast_interval"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>